// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders correctly 1`] = `
<div>
  <div
    class="sc-beySPh bvAwne"
  >
    <label
      aria-label="label"
      class="sc-dmyCSP enyBlq undefined-label"
      stile="default"
    >
      <h3
        class="sc-eDLKkx fLXAhb undefined-heading"
        stile="default"
      />
      <input
        class="sc-guDLey hJeQqt undefined-input"
        stile="default"
      />
    </label>
  </div>
</div>
`;

exports[`Input renders on disabled 1`] = `
<div>
  <div
    class="sc-beySPh eITmsa"
    disabled=""
  >
    <label
      aria-label="Input-label"
      class="sc-dmyCSP jRQXxX undefined-label"
      disabled=""
      stile="default"
    >
      <h3
        class="sc-eDLKkx fLXAhb undefined-heading"
        disabled=""
        stile="default"
      >
        Input
      </h3>
      <input
        class="sc-guDLey hJeQqt undefined-input"
        disabled=""
        stile="default"
      />
    </label>
  </div>
</div>
`;

exports[`Input renders with each stile 1`] = `
<div>
  <div
    class="sc-beySPh bvAwne"
  >
    <label
      aria-label="Input-label"
      class="sc-dmyCSP eBqJxY undefined-label"
      stile="mute"
    >
      <h3
        class="sc-eDLKkx hPtwjE undefined-heading"
        stile="mute"
      >
        Input
      </h3>
      <input
        class="sc-guDLey jofGtu undefined-input"
        stile="mute"
      />
    </label>
  </div>
</div>
`;

exports[`Input renders with each stile 2`] = `
<div>
  <div
    class="sc-beySPh bvAwne"
  >
    <label
      aria-label="Input-label"
      class="sc-dmyCSP enyBlq undefined-label"
      stile="default"
    >
      <h3
        class="sc-eDLKkx fLXAhb undefined-heading"
        stile="default"
      >
        Input
      </h3>
      <input
        class="sc-guDLey hJeQqt undefined-input"
        stile="default"
      />
    </label>
  </div>
</div>
`;

exports[`Input renders with each stile 3`] = `
<div>
  <div
    class="sc-beySPh bvAwne"
  >
    <label
      aria-label="Input-label"
      class="sc-dmyCSP enyBlq label undefined-label"
      stile="primary"
    >
      <h3
        class="sc-eDLKkx fLXAhb heading undefined-heading"
        stile="primary"
      >
        Input
      </h3>
      <input
        class="sc-guDLey hJeQqt input undefined-input"
        stile="primary"
      />
    </label>
  </div>
</div>
`;

exports[`Input renders with error 1`] = `
<div>
  <div
    class="sc-beySPh bvAwne"
    error="true"
  >
    <label
      aria-label="label"
      class="sc-dmyCSP enyBlq undefined-label"
      error="true"
      stile="default"
    >
      <h3
        class="sc-eDLKkx fLXAhb undefined-heading"
        error="true"
        stile="default"
      />
      <input
        class="sc-guDLey hJeQqt error undefined-input"
        error="true"
        stile="default"
      />
    </label>
    <span
      class="sc-hLQSwg gpNhwr undefined-error-message"
    >
      error
    </span>
  </div>
</div>
`;
